tests/parser-test-files/bad-files/parse-for.3.error
error: Malformed for expression
  --> test:4:18
   |
 4 |  (define f (for x y))
   |                    ^ expected in
